# concrete-sdk

./: .gitignore  LICENSE  README.md  dev.py  package.json
api/: openapi.yaml
cli/: pyproject.toml
cli/concrete_cli/: main.py
cli/concrete_cli.egg-info/: PKG-INFO
cli/concrete_cli/commands/: start.py
fern/: fern.config.json  generators.yml
python/: pyproject.toml
python/concrete_sdk/: README.md
python/concrete_sdk/marketing/: mailer.py  types.py
python/concrete_sdk/werkvertrag/: grobkategorie.py  material.py  materialofferte.py  parser.py  transcribe.py
python/concrete_sdk/ziegelei/: types.py
sdks/python/: __init__.py  client.py  environment.py  pyproject.toml  raw_client.py  reference.md  stripe.py
sdks/python/.fern/: metadata.json
sdks/python/concrete_sdk/: README.md
sdks/python/core/: client_wrapper.py
sdks/python/types/: __init__.py  baugesuch_run_response.py  health_status.py  product.py  product_config.py  product_config_add_on1tb.py  product_config_add_on1tb_id.py  product_config_add_on200gb.py  product_config_add_on200gb_id.py  product_config_add_on500gb.py  product_config_add_on500gb_id.py  product_config_chat_agent.py  product_config_chat_agent_id.py  product_config_chatintegration_professional.py  product_config_chatintegration_professional_id.py  product_config_chatintegration_starter.py  product_config_chatintegration_starter_id.py  (+6 more)
sdks/typescript/: BaseClient.ts  Client.ts  environments.ts  index.ts  package-lock.json  package.json  tsconfig.json
typescript/: package.json
typescript/src/: index.ts  stripe.ts  ziegelei.ts
(+16 files in other folders)
