[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete-cli"
version = "0.1.0"
description = "Concrete developer CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
concrete = "concrete_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["concrete_cli*"]
