[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concrete-sdk"
version = "0.1.10"
description = "Concrete shared Python library"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0.0",
    "pydantic>=2.0",
    "pdfplumber>=0.11.0",
    "google-cloud-firestore>=2.0",
    "google-cloud-secret-manager",
    "google-api-python-client",
    "google-auth",
    "resend",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["concrete_sdk*"]
